# torchslim

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  activate_and_test.sh  diagnostic.sh  fix_methods.sh  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  setup_venv.sh
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/api/: core.rst
docs/user_guide/: index.rst
examples/: basic_usage.py  custom_method_example.py
github/workflows/: ci.yml
tests/: conftest.py  test_core.py  test_methods.py  test_utils.py
torchslim/: __init__.py
torchslim/analysis/: __init__.py  analyzer.py  profiler.py  visualization.py
torchslim/core/: __init__.py  base.py  compressor.py  layers.py  registry.py  scheduler.py
torchslim/methods/: __init__.py  knowledge_distillation.py  lora.py  pruning.py  quantization.py  svd.py  tensor_decomposition.py  weight_clustering.py
torchslim/utils/: __init__.py  benchmarks.py  models.py  schedulers.py  validation.py
